# ssh-ai-Gaoce8888

./: Cargo.toml  OPTIMIZATION_GUIDE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  benchmark.sh  build_optimized.sh  config.json  optimization_report.txt  optimize_assets.sh  start.bat  stop.bat
data/db/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  config_guide.md
enterprise/: build-config.json  build-enterprise.ps1  deploy-enterprise.ps1  monitor-enterprise.ps1
logs/: README.md
src/: ai.rs  cache.rs  config.rs  connection_pool.rs  lib.rs  main.rs  main_optimized.rs  models.rs  performance.rs  security.rs  ssh.rs  websocket.rs  websocket_optimized.rs
src/high_performance/: ai.rs  api.rs  main.rs  mod.rs  ssh.rs  websocket.rs
src/optimized/: ai.rs  cache.rs  config.rs  connection_pool.rs  main.rs  mod.rs  models.rs  performance.rs  ssh.rs  websocket.rs
src/optimized/static/: README.md
src/optimized/static/css/: README.md
src/optimized/static/img/: README.md
src/optimized/static/js/: README.md
src/ultra_optimized/: benchmark.rs  cache_layer.rs  memory_pool.rs  mod.rs
static/: index.html  manifest.json  sw.js
static/css/: chat.css  components.css  layout.css  reset.css  responsive.css  styles.css  terminal.css  variables.css
static/fonts/: README.md
static/js/: ai-helper.js  app.js  main.js  terminal-output.js  websocket.js
static/js/modules/: ai-chat.js  config.js  ssh.js  terminal.js  ui.js  utils.js
static_optimized/: api_configs.json  index.html  manifest.json  sw.js
static_optimized/api/: configs
static_optimized/configs/: user_configs.json
static_optimized/css/: chat.css  components.css  layout.css  reset.css  responsive.css  styles.css  terminal.css  variables.css
static_optimized/icons/: README.md
static_optimized/js/: ai-helper.js  app.js  main.js  terminal-output.js  websocket.js
static_optimized/js/modules/: ai-chat.js  config.js  ssh.js  terminal.js  ui.js  utils.js
