[package]
name = "ssh-ai-terminal"
version = "0.2.0"
edition = "2021"

[dependencies]
# 核心异步运行时
tokio = { version = "1.35", features = ["full"] }

# Web框架
warp = "0.3"

# WebSocket
tokio-tungstenite = "0.20"

# SSH连接 - 使用原版本保证兼容性
ssh2 = "0.9"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 并发和异步工具
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 高性能并发数据结构
dashmap = "5.5"
parking_lot = "0.12"

# 内存和缓存
bytes = "1.5"
lru = "0.12"

# 配置管理
toml = "0.8"

# 异步trait
async-trait = "0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 系统信息
num_cpus = "1.16"

# Lazy static
once_cell = "1.19"
lazy_static = "1.4"

[profile.release]
# 性能优化
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
