[package]
name = "ssh-ai-terminal"
version = "0.2.0"
edition = "2021"
authors = ["SSH-AI Team"]
description = "高性能SSH AI终端应用"
license = "MIT"
repository = "https://github.com/ssh-ai/terminal"
readme = "README.md"

[dependencies]
# 核心异步运行时 - 启用更多特性
tokio = { version = "1.35", features = ["full", "tracing"] }

# Web框架
warp = "0.3"

# WebSocket - 更新版本
tokio-tungstenite = "0.21"

# SSH连接
ssh2 = "0.9"

# 序列化 - 优化性能
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# 并发和异步工具
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }

# HTTP客户端 - 优化特性
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls"], default-features = false }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 高性能日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 高性能并发数据结构
dashmap = "5.5"
parking_lot = "0.12"

# 内存和缓存优化
bytes = "1.5"
lru = "0.12"

# 配置管理
toml = "0.8"

# 异步trait
async-trait = "0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"], default-features = false }

# 系统信息
num_cpus = "1.16"

# Lazy static
once_cell = "1.19"
lazy_static = "1.4"

# 性能监控 - 可选
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }

# 压缩 - 可选
flate2 = { version = "1.0", optional = true }
brotli = { version = "3.4", optional = true }

# 优化的hash函数 - 可选
ahash = { version = "0.8", optional = true }

# 内存池 - 可选
object-pool = { version = "0.5.4", optional = true }

# 快速字符串操作 - 可选
smallstr = { version = "0.3", optional = true }
compact_str = { version = "0.7", optional = true }

[profile.release]
# 最大性能优化
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# 开发时的快速编译
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.bench]
# 基准测试优化
opt-level = 3
lto = true
codegen-units = 1
debug = false

[features]
default = ["basic-features"]
basic-features = []
high-performance = ["compression", "metrics", "object-pooling", "advanced-strings"]
compression = ["flate2", "brotli"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
object-pooling = ["object-pool"]
advanced-strings = ["smallstr", "compact_str", "ahash"]

# 针对不同场景的特性
minimal = []
enterprise = ["high-performance", "advanced-logging"]
advanced-logging = ["tracing-subscriber/json"]
